<resources>
    <!--<string name="app_name">SGKKS</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ok_button">OK</string>
    <string name="noInternet">Please check your internet connection</string>
    <string name="q_and_a"><![CDATA[Q & A]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="optional_api_error">Oops! Something went wrong</string>
    <string name="add_me_sgks">Add Me To SGKKS</string>
    <string name="suggestion_box">SGKKS Suggestions Box</string>
    <string name="member_details">Member Details</string>
    <string name="contactUs">Contact Us</string>
    <string name="healthPlus">SGKKS Health Plus</string>
    <string name="help">Help</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="news_title_image">news title image</string>
    <string name="news_type_birthday">birthday</string>
    <string name="news_type_nidhan">dukhad-nidhan</string>
    <string name="news_type_achievement">achievement</string>
    <string name="news_type_tag">news type tag</string>
    <string name="news_type_general">general</string>
    <string name="classified_details_title">Classified Details</string>
    <string name="message_details_title">Message Details</string>
    <string name="city_name_pune">PUNE</string>
    <string name="city_name_navsari">NAVSARI</string>
    <string name="contact_info_navsari">Shree Gurjar Kshatriya Samaj, Navsari</string>
    <string name="contact_info_pune">Shree Gurjar Kshatriya Samaj, Pune (Halar Vibhag)</string>
    <string name="sgks_reg_number_navsari">Reg. No: A|645|2015|NAVSARI</string>
    <string name="sgks_reg_number_pune">Reg. No: MAHA|5971|2016|PUNE</string>
    <string name="sgks_address_navsari">Address : Laxmi Nagar 1, Near Gopal Nagar, Vijalpore, Navsari, Gujrat 396450. Email ID : navsari@kadiyasamaj.com</string>
    <string name="sgks_address_pune">Address : 5th Floor, Siddhi Towers, Above Rupee Bank, Kondhwa, Pune, Maharashtra 411048. Email ID : sgksmediapune@gmail.com</string>
    <string name="sgks_contact_navsari">Contact No : 09601169059</string>
    <string name="sgks_contact_pune">Contact No : +91 8983 851851</string>
    <string name="tag_local_storage_sync">localDataSync</string>
    <string name="settings">Settings</string>
    <string name="notification_title_database_sync_in_progress">SGKKS Data Sync In Progress</string>
    <string name="notification_detail_please_wait">Please wait, this may take some time</string>
    <string name="toast_select_city">Please Select SGKKS City</string>
    <string name="databse_sync_enabled_info">Enabled, app will sync data locally</string>
    <string name="databse_sync_disabled_info">Disabled, app will not sync data locally</string>
    <string name="toast_databse_sync_enabled">Data Sync Enabled</string>
    <string name="toast_databse_sync_disabled">Data Sync Disabled</string>
    <string name="offline_support_enabled_info">Enabled, app will work offline if data is synchronized locally</string>
    <string name="toast_offline_support_enabled">Enabled, app will offline</string>
    <string name="offline_support_disabled_info">Offline Support Disabled</string>
    <string name="toast_offline_support_disabled">Offline Support Disabled</string>
    <string name="toast_you_are_offline">You are offline, some functionality may not work.</string>
    <string name="alert_sync_failed">Data will not sync if you are not connected to internet.\nYou can still use application offline.</string>
    <string name="toast_allowed_characters_member_search">Allowed characters are A-Z a-z 0-9 - and space only</string>
    <string name="search_name_surname_member_id">Search Members</string>
    <string name="search_city">Search City</string>
    <string name="member_image">committee member image</string>
    <string name="accounts">Accounts</string>
    <string name="select_year">Select Year</string>
    <string name="permission_required">Permission required to save image.</string>
    <string name="committee_details_title">Committee Details</string>
    <string name="event_details_title">Event Details</string>
    <string name="amroli">Amroli</string>
    <string name="city_name_amroli">AMROLI</string>
    <string name="contact_info_amroli">Shree Gurjar Kshatriya Samaj, Amroli (Halar Vibhag)</string>
    <string name="sgks_address_amroli">Address : 87-88, Jalaram society, Opp. Vishwakarma temple, Amroli, Surat, Gujarat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_contactNumber">Enter Mobile Number</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_dateOfBirth">Select Date of Birth</string>
    <string name="select_bloodGroup">Select Blood Group</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="enter_address">Enter Address</string>
    <string name="select_city">Select Your City</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verification">SGKKS Moblie Number Verification</string>
    <string name="change_language" translatable="true">Change Language</string>
    <string name="english">English</string>
    <string name="gujarati">Gujarati</string>
    <string name="update_app_dialog">You are using an older version of SGKKS app which is not being supported anymore. Please update.</string>
    <string name="otp_sent"> An OTP has been sent to mobile number, please check</string>
    <string name="default_city_english">Pune</string>
    <string name="default_city_gujarati">પુને</string>
    <string name="buzz_en">Buzz</string>
    <string name="dukhad_nidhan_en">Dukhad Nidhan</string>
    <string name="birthday_en">Birthday</string>
    <string name="achievement_en">Achievement</string>
    <string name="general_en">General</string>
    <string name="buzz_gj">બઝ</string>
    <string name="dukhad_nidhan_gj">દુખદ નિધન</string>
    <string name="birthday_gj">જન્મદિવસ</string>
    <string name="achievement_gj">સિદ્ધિ</string>
    <string name="general_gj">સામાન્ય</string>
    <string name="dialog_title_gj">સંદેશ રંગ કોડ</string>
    <string name="dialog_title_en">Message Color Code</string>
    <string name="press_again_to_exit">Press again to exit</string>
</resources>
