<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_page_button_background"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp">

    <TextView
        style="@style/style_text_view_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/dimen_5dp"
        android:text="@string/change_language"
        android:textStyle="bold"/>

    <View
        style="@style/style_vertical_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@color/color_white"
        android:elevation="@dimen/dimen_30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEnglishLanguage"
            style="@style/style_text_view_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/english"/>

        <View
            style="@style/style_vertical_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"/>

        <TextView
            android:id="@+id/tvGujuratiLanguage"
            style="@style/style_text_view_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/gujarati"/>
    </LinearLayout>
</LinearLayout>