<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    tools:mContext="com.woxi.home.HomeActivity">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".home.VerificationActivity">
        <ProgressBar
            android:id="@+id/pbVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/verificationFor"
            android:layout_above="@+id/tvConfirmMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/v8"
            android:paddingBottom="@dimen/v8"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"
            android:textSize="@dimen/textsize_normal_18dp"
            android:textStyle="bold"
            android:text="Type"/>

        <TextView
            android:id="@+id/tvConfirmMobileNumber"
            style="@style/customTextView_16_Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/v8"
            android:paddingBottom="@dimen/v8"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"
            android:layout_above="@+id/llEnterMobileNumber"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llEnterMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/etLable"
                style="@style/customTextView_16_Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/v8"
                android:text="@string/enter_contactNumber"
                android:textColor="@color/colorBlack"
                android:textAlignment="center" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/etMobileNumber"
                    style="@style/customEditText_16"
                    android:layout_marginBottom="@dimen/v8"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/v8"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"
                    android:hint="Mobile"/>
                <EditText
                    android:id="@+id/etOtp"
                    style="@style/customEditText_16"
                    android:layout_marginBottom="@dimen/v8"
                    android:paddingLeft="@dimen/v8"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"
                    android:inputType="phone"
                    android:hint="OTP"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvErrorMessage"
                style="@style/customTextView_16_Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/v8"
                android:text="@string/enter_contactNumber"
                android:textColor="@color/colorRed"
                android:textAlignment="center"
                android:visibility="gone"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnSendMobileNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="159dp"
            android:text="Next" />
        <TextView
            android:id="@+id/tvOtpSent"
            style="@style/customTextView_16_Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/v8"
            android:text="@string/otp_sent"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"
            android:layout_below="@+id/llEnterMobileNumber"
            android:visibility="gone"/>
    </RelativeLayout>
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlueMedium"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/llMemberCount"
                    android:gravity="center_vertical"
                    android:text="@string/verification"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>